fixed overlay z-index on start page

--- a/Frontend/src/app/start/start.component.scss
+++ b/Frontend/src/app/start/start.component.scss
@@ -4,7 +4,6 @@
   font-size: 300px;
   font-weight: bold;
   color: $mcp-black-3;
-  z-index: 2;
 }
 
 .logo-start {
@@ -12,6 +11,6 @@
   width: 90vw;
   top: 120px;
   left: 5vw;
-  z-index: 1;
+  z-index: -1;
   opacity: 0.03;
 }
